Add header to index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
 </head>
 
 <body>
-
+  <header>
+    <h1>Nuestra web</h1>
+    <nav>
+      <ul>
+        <li>
+          <a href="index.html">Home</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
 </body>
 
 </html>
