Add content to quienes-somos.html, add images

--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -24,6 +24,23 @@
       </ul>
     </nav>
   </header>
+  <main>
+    <section>
+      <article>
+        <h2>Alex</h2>
+        <img src="images/alex-avatar.webp" alt="Álex Andru rodeado de plantas" height="300">
+        <p> Alex es un alumno de ISDI coders que tiene muchas
+          ganas de programar y de liarla un poco mientras lo hace.
+          En su tiempo libre es un guru de meditacion y resolucion de conflictos</p>
+      </article>
+      <article>
+        <h2>Trizia</h2>
+        <img src="/images/trizia-avatar.webp" alt="Trizia Femenías con flores en el pelo" height="300">
+        <p>Trizia es una alumna de ISDI coders que le encanta programar y los comandos de SQL.
+          En su tiempo libre atiende soporte tecnico a boomers Alemanes y cuida de su familia de mas de 50 furbys. </p>
+      </article>
+    </section>
+  </main>
 </body>
 
 </html>
