Fix grammar error in meta description

--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Se describe quienes somos los dos alumnos de ISDI Coders - Alex y Trizia, y 
+  <meta name="description" content="Se describe quienes somos los dos alumnos de ISDI Coders - Alex y Trizia, e 
     incluimos datos curiosos y unas fotos">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <title>¿Quiénes Somos?</title>
