Add Alex Curriculum to cv.html

--- a/cv.html
+++ b/cv.html
@@ -65,7 +65,42 @@
           </ul>
         </section>
       </article>
-
+      <article>
+        <h2>Curriculum Alex Andru</h2>
+        <section>
+          <h3>Info General</h3>
+          <ul>
+            <li><span>Nombre: Alexandr</span></li>
+            <li><span>Apellido: Andrushevich</span></li>
+            <li><span>Email: alex007d@gmail.com</span></li>
+          </ul>
+        </section>
+        <section>
+          <h3>Experiencia laboral</h3>
+          <ul>
+            <li><span>2020-2021 - Centro de Innovacion Social Bronx, SubDirector</span></li>
+            <li><span>2021-2023 - EvoFarms, CEO</span></li>
+          </ul>
+        </section>
+        <section>
+          <h3>Formación académica</h3>
+          <ul>
+            <li><span>2018-2019: Derecho y Politica Internacional, ESADE</span></li>
+            <li><span>2019-2022: Finanzas y Ingenieria Financiera, Fordham</span></li>
+            <li><span>2022-2023: Inteligencia Artificial y Arquitectura de Software, SpaceHarbor</span></li>
+          </ul>
+        </section>
+        <section>
+          <h3>Idiomas</h3>
+          <ul>
+            <li><span>Castellano</span></li>
+            <li><span>Inglés</span></li>
+            <li><span>Ruso</span></li>
+            <li><span>Ukraniano</span></li>
+            <li><span>Frances</span></li>
+          </ul>
+        </section>
+      </article>
     </section>
   </main>
 </body>
