Fix add spacing after each <li> in cv.html

--- a/cv.html
+++ b/cv.html
@@ -34,34 +34,60 @@
         <section>
           <h3>Info General</h3>
           <ul>
-            <li><span>Nombre: Patricia Jara</span></li>
-            <li><span>Apellido: Femenías Regalado</span></li>
-            <li><span>Email: patricia.femenias@gmail.com</span></li>
+            <li>
+              <span>Nombre: Patricia Jara</span>
+            </li>
+            <li>
+              <span>Apellido: Femenías Regalado</span>
+            </li>
+            <li>
+              <span>Email: patricia.femenias@gmail.com</span>
+            </li>
           </ul>
         </section>
         <section>
           <h3>Experiencia laboral</h3>
           <ul>
-            <li><span>2020-2021 - Helpdesk en Fhios para Desigual</span></li>
-            <li><span>2021-2023 - Helpdesk en Nextret para Hartmann AG</span></li>
+            <li>
+              <span>2020-2021 - Helpdesk en Fhios para Desigual</span>
+            </li>
+            <li>
+              <span>2021-2023 - Helpdesk en Nextret para Hartmann AG</span>
+            </li>
           </ul>
         </section>
         <section>
           <h3>Formación académica</h3>
           <ul>
-            <li><span>2005-2010: Instituto Bilingüe IES Triana</span></li>
-            <li><span>2010-2014: Grado en Lengua y literatura Alemana, US</span></li>
-            <li><span>2014-2015: Erasmus, Freie Universität Berlin</span></li>
+            <li>
+              <span>2005-2010: Instituto Bilingüe IES Triana</span>
+            </li>
+            <li>
+              <span>2010-2014: Grado en Lengua y literatura Alemana, US</span>
+            </li>
+            <li>
+              <span>2014-2015: Erasmus, Freie Universität Berlin</span>
+            </li>
           </ul>
         </section>
         <section>
           <h3>Idiomas</h3>
           <ul>
-            <li><span>Castellano: C2</span></li>
-            <li><span>Inglés: B1</span></li>
-            <li><span>Francés: C1</span></li>
-            <li><span>Portugués: B2</span></li>
-            <li><span>Alemán: B1</span></li>
+            <li>
+              <span>Castellano: C2</span>
+            </li>
+            <li>
+              <span>Inglés: B1</span>
+            </li>
+            <li>
+              <span>Francés: C1</span>
+            </li>
+            <li>
+              <span>Portugués: B2</span>
+            </li>
+            <li>
+              <span>Alemán: B1</span>
+            </li>
           </ul>
         </section>
       </article>
@@ -70,34 +96,60 @@
         <section>
           <h3>Info General</h3>
           <ul>
-            <li><span>Nombre: Alexandr</span></li>
-            <li><span>Apellido: Andrushevich</span></li>
-            <li><span>Email: alex007d@gmail.com</span></li>
+            <li>
+              <span>Nombre: Alexandr</span>
+            </li>
+            <li>
+              <span>Apellido: Andrushevich</span>
+            </li>
+            <li>
+              <span>Email: alex007d@gmail.com</span>
+            </li>
           </ul>
         </section>
         <section>
           <h3>Experiencia laboral</h3>
           <ul>
-            <li><span>2020-2021 - Centro de Innovacion Social Bronx, SubDirector</span></li>
-            <li><span>2021-2023 - EvoFarms, CEO</span></li>
+            <li>
+              <span>2020-2021 - Centro de Innovacion Social Bronx, SubDirector</span>
+            </li>
+            <li>
+              <span>2021-2023 - EvoFarms, CEO</span>
+            </li>
           </ul>
         </section>
         <section>
           <h3>Formación académica</h3>
           <ul>
-            <li><span>2018-2019: Derecho y Politica Internacional, ESADE</span></li>
-            <li><span>2019-2022: Finanzas y Ingenieria Financiera, Fordham</span></li>
-            <li><span>2022-2023: Inteligencia Artificial y Arquitectura de Software, SpaceHarbor</span></li>
+            <li>
+              <span>2018-2019: Derecho y Politica Internacional, ESADE</span>
+            </li>
+            <li>
+              <span>2019-2022: Finanzas y Ingenieria Financiera, Fordham</span>
+            </li>
+            <li>
+              <span>2022-2023: Inteligencia Artificial y Arquitectura de Software, SpaceHarbor</span>
+            </li>
           </ul>
         </section>
         <section>
           <h3>Idiomas</h3>
           <ul>
-            <li><span>Castellano</span></li>
-            <li><span>Inglés</span></li>
-            <li><span>Ruso</span></li>
-            <li><span>Ukraniano</span></li>
-            <li><span>Frances</span></li>
+            <li>
+              <span>Castellano</span>
+            </li>
+            <li>
+              <span>Inglés</span>
+            </li>
+            <li>
+              <span>Ruso</span>
+            </li>
+            <li>
+              <span>Ukraniano</span>
+            </li>
+            <li>
+              <span>Frances</span>
+            </li>
           </ul>
         </section>
       </article>
