Add links to index,cv,contact,quienes-somos...html

--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,9 @@
           <a href="quienes-somos.html">¿Quiénes somos?</a>
         </li>
         <li>
+          <a href="cv.html">Curriculums</a>
+        </li>
+        <li>
           <a href="contact.html">Contacto</a>
         </li>
       </ul>
