--- a/cv.html
+++ b/cv.html
@@ -19,10 +19,13 @@
           <a href="index.html">Home</a>
         </li>
         <li>
-          <a href="quienes-somos.html">¿Quiénes Somos?</a>
+          <a href="quienes-somos.html">¿Quiénes somos?</a>
         </li>
         <li>
           <a href="cv.html">Curriculums</a>
+        </li>
+        <li>
+          <a href="contact.html">Contacto</a>
         </li>
       </ul>
     </nav>
