--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
         <li>
           <a href="index.html">Home</a>
         </li>
+        <li>
+          <a href="quienes-somos.html">¿Quiénes somos?</a>
+        </li>
+        <li>
+          <a href="cv.html">Curriculums</a>
+        </li>
+        <li>
+          <a href="contact.html">Contacto</a>
+        </li>
       </ul>
     </nav>
   </header>
